# a1_mpc_raisim

./: CMakeLists.txt  README.md
include/: a1.hpp  gait_generator.hpp  locomotion_controller.hpp  mpc_osqp.hpp  stance_controller.hpp  swing_controller.hpp
libs/qpoases/: CMakeLists.txt
libs/raisim/include/raisim/: math.hpp
src/: a1.cpp  gait_generator.cpp  locomotion_controller.cpp  mpc_osqp.cc  stance_controller.cpp  swing_controller.cpp
tests/: raisim_example.cpp  whole_body_controller.cpp
